feat(property): add admin endpoints for hotel and agency property listings + unit tests
  - GET /v1/properties/admin/hotels — all hotel properties (hotel IS NOT NULL),
    filterable by status and hotelId, ADMIN/SUPER_ADMIN only
  - GET /v1/properties/admin/agencies — all agency properties (agency IS NOT NULL),
    filterable by status and agencyId, ADMIN/SUPER_ADMIN only
  - Add findAllHotelProperties / findAllAgencyProperties JPQL queries in PropertyRepository
  - Add listHotelProperties / listAgencyProperties to PropertyService + PropertyServiceImpl
  - Add 10 unit tests (ListHotelProperties x5, ListAgencyProperties x5) — 50 total, 0 failures
  - Jira: SCRUM-324 (hôtels) · SCRUM-325 (agences)